--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,29 @@
+a {
+  color: #4d4d4d;
+}
+a:hover {
+  color: #8d8d8d;
+}
+
+.ui.teal.header {
+  color: #4d4d4d !important;
+}
+.ui.teal.button,
+.ui.teal.buttons .button {
+  background-color: #8d8d8d;
+}
+.ui.teal.button:hover,
+.ui.teal.buttons .button {
+  background-color: #4d4d4d;
+}
+.sigColor {
+  color: #22b573;
+}
+
+.sigBgColor {
+  background-color: #22b573;
+}
+
 .alert {
   max-width: 350px;
   width: 100%;
@@ -5,7 +31,7 @@
 }
 
 .headerSpace {
-  height: 60px;
+  height: 80px;
 }
 
 .signform {
