--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,12 +1,12 @@
 a {
-  color: #4d4d4d;
+  color: #2e2e2e;
 }
 a:hover {
   color: #8d8d8d;
 }
 
 .ui.teal.header {
-  color: #4d4d4d !important;
+  color: #2e2e2e !important;
 }
 .ui.teal.button,
 .ui.teal.buttons .button {
