--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -107,3 +107,7 @@
 .material-icons.md-light.md-inactive {
   color: rgba(255, 255, 255, 0.3);
 }
+
+body {
+  background-color: white !important;
+}
