--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,21 +1,45 @@
 <html lang="en">
+
 <head>
     <% include ./inc/header.ejs %>
 </head>
+
 <body>
-    <% if(session){ %>
-    <a href="/admin/logout"></a>
-    <% }else { %>
-    <p>왜 안되는거지...</p>
-    <% }%>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+        <div class="container">
+            <span class="admin_logo">
+                Styel Admin Page
+            </span>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/admin/logout">Logout</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <div class="row">
         <div class="col-sm-3">
+            <%=user %>님 안녕하세요.
             <div><a href="#">Dashboard</a></div>
             <div><a href="#">Member</a></div>
         </div>
         <div class="col-sm-9">
-            <div></div>
+            <div>
+                <h1>Dashboard</h1>
+            </div>
+            <div>
+                전체 회원 <%= all_member %>
+                전체 Post <%= all_post %>
+            </div>
         </div>
     </div>
 </body>
+
 </html>
