--- a/views/login.html
+++ b/views/login.html
@@ -1,6 +1,7 @@
 <html lang="en">
 <head>
-    <% include ./inc/header.ejs %>
+    
+    <!-- <% include ./inc/header.ejs %> -->
 
     <script>
     function check(){
@@ -8,22 +9,129 @@
     }
 
     </script>
+
+    <!-- bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+
+
+    <!-- text reveal src -->
+    <script src="https://cdn.jsdelivr.net/npm/baffle@0.3.6/dist/baffle.min.js"></script>
+
+    
+    <style>
+        /* reveal style class  */
+    .data {
+    font-family: Poppins;
+    color: springgreen;
+    font-size: 42px;
+    letter-spacing: 12px;
+    font-weight: 600;
+    position: fixed;
+    top: 15%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+    html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100vh;
+    background: black;
+}
+
+
+    .loginbox {
+        font-family: 'Courier New', Courier, monospace;
+        color: white;
+        font-size: 19px;
+        letter-spacing: 1px;
+        font-weight: bold;
+        position: fixed;
+        top: 45%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+            }
+
+    .loginbutton {
+        font-family: 'Courier New', Courier, monospace;
+        color: black;
+        font-size: 17px;
+        letter-spacing: none;
+        font-weight: bold;
+
+
+    }
+
+      
+
+
+            
+
+    </style>
+    
+
 </head>
+
+
 <body>
-    <div class="row full">
+
+        <div class="container">
+                <div class="data">STYLE ADMIN</div>
+          </div>
+        
+
+          <script type="text/javascript">
+    
+          const text = baffle(".data");
+          text.set({
+                characters : '█▓█ ▒░/▒░ █░▒▓/ █▒▒ ▓▒▓/█ ░█▒/ ▒▓░ █<░▒ ▓/░>',
+                speed: 120
+          });
+          text.start();
+          text.reveal(500, 600);
+    
+          </script>
+
+          
+
+
+
+<!-- 2nd motion 
+          <div class="container">
+                 <div class="data">STYEL</div>
+           </div>
+        
+          <script type="text/javascript">
+
+          const text = baffle(".data");
+          text.set({
+          characters : '█▓█ ▒░/▒░ █░▒▓/ █▒▒ ▓▒▓/█ ░█▒/ ▒▓░ █<░▒ ▓/░>',
+          speed: 120
+          });
+          text.start();
+          text.reveal(500, 600);
+
+           </script>
+        -->
+
+
+    <!--<div class="row full">
         <div class="col-sm-4 left-div">
             <h2>Styel Admin Page</h2>
         </div>
-        <div class="col-sm-8 right-div">
+
+    -->
+        <div class="loginbox">
             <div>
                 <form action="/admin/login" method="POST">
                     <label for="email">Email</label><br>
-                    <input type="text" id="email" name="email"><br>
-                    
+                    <input type="text" id="email" name="email" style="width:400px"><br><br>
                     <label for="password">Password</label><br>
-                    <input type="password" id="password" name="password"><br>
-                    
-                    <input type="submit" value="Login">
+                    <input type="password" id="password" name="password" style="width:400px"><br><br>              
+                    <button type="submit" style class="loginbutton">Sign In</button>
                 </form>
             </div>
         </div>
