26일 작업 마무리

--- a/views/manage.ejs
+++ b/views/manage.ejs
@@ -5,6 +5,15 @@
 </head>
 <body>
     <% include ./inc/nav.ejs %>
+
+    <div class="row">
+        <div>
+
+        </div>
+        <div>
+            
+        </div>
+    </div>
     
     <h1>회원 관리</h1>
     <table>
