clean unused stuff

--- a/views/login.html
+++ b/views/login.html
@@ -11,9 +11,9 @@
     </script>
 
     <!-- bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"> -->
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css"> -->
+    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script> -->
 
 
     <!-- text reveal src -->
@@ -95,35 +95,6 @@
     
           </script>
 
-          
-
-
-
-<!-- 2nd motion 
-          <div class="container">
-                 <div class="data">STYEL</div>
-           </div>
-        
-          <script type="text/javascript">
-
-          const text = baffle(".data");
-          text.set({
-          characters : '█▓█ ▒░/▒░ █░▒▓/ █▒▒ ▓▒▓/█ ░█▒/ ▒▓░ █<░▒ ▓/░>',
-          speed: 120
-          });
-          text.start();
-          text.reveal(500, 600);
-
-           </script>
-        -->
-
-
-    <!--<div class="row full">
-        <div class="col-sm-4 left-div">
-            <h2>Styel Admin Page</h2>
-        </div>
-
-    -->
         <div class="loginbox">
             <div>
                 <form action="/admin/login" method="POST">
