--- a/views/login.html
+++ b/views/login.html
@@ -8,12 +8,6 @@
 
     </script>
 
-    <!-- bootstrap -->
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"> -->
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css"> -->
-    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script> -->
-
-
     <!-- text reveal src -->
     <script src="https://cdn.jsdelivr.net/npm/baffle@0.3.6/dist/baffle.min.js"></script>
 
@@ -63,10 +57,14 @@
 
     }
 
-      
+    .input {
+        width: 400px;
+        padding: 0.6em;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 12px;
 
+    }
 
-            
 
     </style>
     
@@ -97,9 +95,9 @@
             <div>
                 <form action="/admin/login" method="POST">
                     <label for="email">Email</label><br>
-                    <input type="text" id="email" name="email" style="width:400px"><br><br>
+                    <input type="text" id="email" name="email" style class="input"><br><br>
                     <label for="password">Password</label><br>
-                    <input type="password" id="password" name="password" style="width:400px"><br><br>              
+                    <input type="password" id="password" name="password" style class="input"><br><br>              
                     <button type="submit" style class="loginbutton">Sign In</button>
                 </form>
             </div>
