--- a/views/manage.ejs
+++ b/views/manage.ejs
@@ -7,30 +7,32 @@
     <% include ./inc/nav.ejs %>
 
     <div class="row">
-        <div>
-
+        <div class="col-sm-3">
+            <%=user %>님 안녕하세요.
+            <div><a href="/admin/dashboard">Dashboard</a></div>
+            <div><a href="/admin/member_manage">Member</a></div>
         </div>
-        <div>
-            
+        <div class="col-sm-9">
+            <h1>회원 관리</h1>
+            <table>
+                <tr>
+                    <th>Name</th>
+                    <th>Email</th>
+                    <th>Role</th>
+                </tr>
+                <% for(let i=0; i < all_member.length; i++ ){ %>
+        
+                <tr>
+                    <td><%=all_member[i].name %></td>
+                    <td><%=all_member[i].email %></td>
+                    <td><%=all_member[i].role %></td>
+                </tr>
+                <% } %>
+            </table>        
         </div>
     </div>
     
-    <h1>회원 관리</h1>
-    <table>
-        <tr>
-            <th>Name</th>
-            <th>Email</th>
-            <th>Role</th>
-        </tr>
-        <% for(let i=0; i < all_member.length; i++ ){ %>
-
-        <tr>
-            <td><%=all_member[i].name %></td>
-            <td><%=all_member[i].email %></td>
-            <td><%=all_member[i].role %></td>
-        </tr>
-        <% } %>
-    </table>
+    
     
     
 </body>
