--- a/views/login.html
+++ b/views/login.html
@@ -69,6 +69,12 @@
 
     }
 
+    .bottomline {
+        color: #888888;
+        font: 12px;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        margin: 5px 30px 0px 0px;
+    }
     </style>
     
 
