--- a/views/login.html
+++ b/views/login.html
@@ -26,7 +26,7 @@
     padding: 0;
     width: 100%;
     height: 100vh;
-    background: black;
+    background: #000000;
 }
 
 
@@ -71,10 +71,23 @@
 
     .bottomline {
         color: #888888;
-        font: 12px;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-size: 13px;
         margin: 5px 30px 0px 0px;
+        position: fixed;
+        bottom: 3%;
+        left: 1%;
     }
+
+     
+    .bottomlink { 
+        color: #555555; 
+        font-size: 13px; 
+        margin: 5px 7px 0px 0px; 
+        padding: 0px 10px 0px 0px;
+        position: fixed;
+        bottom:3%;
+    }
+    
     </style>
     
 
@@ -84,7 +97,7 @@
 <body>
 
         <div class="container">
-                <div class="data">STYLE ADMIN</div>
+                <div class="data">STYEL ADMIN</div>
           </div>
         
 
@@ -118,6 +131,23 @@
         <a href="/">
             <img alt="STYEL" src="https://styel.s3.ap-northeast-2.amazonaws.com/styel_42x42.png">
         </a>
+    </div>
+
+    <!-- bottom line rights info -->
+
+    <div class="bottomline">
+        Copyright ©
+			
+			2019
+			Styel Inc. All rights reserved.
+    </div>
+
+    <div class="bottomlink">
+        <a class="bottomlink" href="" style="left: 565px">Privacy Policy</a>
+        <a class="bottomlink" href="" style="left: 650px">Terms of use</a>
+        <a class="bottomlink" href="" style="left: 730px">Regal</a>
+        <a class="bottomlink" href="" style="left: 770px">Contact</a>
+        <a class="bottomlink" href="" style="left: 820px">Site Map</a>
     </div>
 </body>
 </html> 
