--- a/views/login.html
+++ b/views/login.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" href="admin_main.css">
+    <link rel="stylesheet" href="/css/admin_main.css">
     <!-- <% include ./inc/header.ejs %> -->
 
     <!-- text reveal src -->
@@ -37,7 +37,7 @@
         <div class="loginbox">
             <div>
                 <form action="/admin/login" method="POST">
-                    <label for="email" style="">ID</label><br>
+                    <label for="email">ID</label><br>
                     <input type="text" id="email" name="email" style class="input"><br><br>
                     <label for="password">Password</label><br>
                     <input type="password" id="password" name="password" style class="input"><br><br>              
