--- a/views/login.html
+++ b/views/login.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" href="admin_main.css">
+    <link rel="stylesheet" href="/public/css/admin_main.css">
     <!-- <% include ./inc/header.ejs %> -->
 
     <!-- text reveal src -->
