--- a/views/login.html
+++ b/views/login.html
@@ -6,8 +6,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" href="/public/css/admin_main.css">
-    <!-- <% include ./inc/header.ejs %> -->
+    <!-- <link rel="stylesheet" href="admin_main.css"> -->
+    <link rel="stylesheet" href="admin_main.css">
+    
+    
 
     <!-- text reveal src -->
     <script src="https://cdn.jsdelivr.net/npm/baffle@0.3.6/dist/baffle.min.js"></script>
@@ -66,7 +68,7 @@
     <!-- bottom links -->
     <div class="bottomlink">
         <a class="bottomlink" href="" style="left: 565px">Privacy Policy</a>
-        <a class="bottomlink" href="" style="left: 650px">Terms of use</a>
+        <a class="bottomlink" href="" style="left: 650px">Terms of Use</a>
         <a class="bottomlink" href="" style="left: 730px">Regal</a>
         <a class="bottomlink" href="" style="left: 770px">Contact</a>
         <a class="bottomlink" href="" style="left: 820px">Site Map</a>
