--- a/views/manage.ejs
+++ b/views/manage.ejs
@@ -19,7 +19,8 @@
                     <th>Name</th>
                     <th>Email</th>
                     <th>Role</th>
-                    <th>Role Change</th>
+                    <th>Admin change</th>
+                    <th>BlackList change</th>
                 </tr>
                 <% for(let i=0; i < all_member.length; i++ ){ %>
         
@@ -27,7 +28,8 @@
                     <td><%=all_member[i].name %></td>
                     <td><%=all_member[i].email %></td>
                     <td><%=all_member[i].role %></td>
-                    <td><a href="#"><button>전환</button></a></td>
+                    <td><a href="/admin/admin_change?user=<%= all_member[i].email %>"><button>전환</button></a></td>
+                    <td><a href="/admin/black_change?user=<%= all_member[i].email %>"><button>전환</button></a></td>
                 </tr>
                 <% } %>
             </table>        
