--- a/views/custom.css
+++ b/views/custom.css
@@ -6,7 +6,7 @@ html, body {
 
 .sidenav {
     height: 100%;
-    width: 160px;
+    width: 200px;
     position: fixed;
     z-index: 1;
     top: 5%;
@@ -15,7 +15,7 @@ html, body {
     overflow-x: hidden;
     padding-top: 20px;
   }
-  
+  /* #818181 */
   .sidenav a {
     padding: 6px 8px 6px 16px;
     text-decoration: none;
@@ -28,3 +28,41 @@ html, body {
   .sidenav a:hover {
     color: #f1f1f1;
   }
+
+
+ .nav-link {
+   color: #f1f1f1;
+   position: fixed;
+   top: 2%;
+   left: 93%;
+   font-family: 'Courier New', Courier, monospace;
+   font-size: 15px;
+   font-weight: bold;
+ }
+
+ .nav-top-p {
+   color: #f1f1f1;
+   position: fixed;
+   top: 10px;
+   left: 3.5em;
+   font-family: 'Courier New', Courier, monospace;
+   font-size: 20px;
+   font-weight: bold;
+ }
+
+ .nav-top-description {
+   
+  color: #818181;
+   
+   font-family: 'Courier New', Courier, monospace;
+   font-size: 14px;
+   font-style: italic;
+   font-weight: unset;
+   position: fixed;
+   top: 15px;
+   left: 20em;
+
+ }
+
+
+ /* <a class="nav-link" href="/admin/logout" style="position: fixed; top: 2%; left:93%;">Sign Out</a> */
