--- a/views/admin_main.html
+++ b/views/admin_main.html
@@ -52,8 +52,88 @@
             <a href="#Dashboard">&nbsp;Dashboard</a>
             <a href="#Members">&nbsp;Members</a>
             <a href="#Help">&nbsp;Help</a>
-          </div>
-     
+        </div>
+          
+
+
+          <div class="row placeholders col-sm-offset-3 main">
+              <div class="col-xs-6 col-sm-3 placeholder">
+                <div class="dash_wrap">
+                  <div class="dash_image">
+                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200"
+                      height="200">
+                  </div>
+                  <div class="dash_text">
+                    <p><%= all_member %></p>
+                  </div>
+                </div>
+                <h4 class="h4">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#USER</h4>
+              </div>
+              <div class="col-xs-6 col-sm-3 placeholder">
+                <div class="dash_wrap">
+                  <div class="dash_image">
+                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200"
+                      height="200">
+                  </div>
+                  <div class="dash_text">
+                    <p><%= all_post %></p>
+                  </div>
+                </div>
+                <h4 class="h4">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#POST</h4>
+              </div>
+              <div class="col-xs-6 col-sm-3 placeholder">
+                <div class="dash_wrap">
+                  <div class="dash_image">
+                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200"
+                      height="200">
+                  </div>
+                  <div class="dash_text">
+                    <p><%= black_member %></p>
+                  </div>
+                </div>
+                <h4 class="h4">&nbsp;&nbsp;&nbsp;
+                  #BLACK LIST</h4>
+              </div>
+            </div>
+            <br>
+            <br>
+            <br>
+        
+            <div class="container col-sm-offset-2">
+                
+              <div class="col-xs-5 col-sm-12 jumbotron">
+                <h1> <b>Check List</b> </h1>
+                <hr>
+                <div>
+                  <p> <i>PC 및 제어</i> </p>
+                  <p> <i>비밀번호 관리</i></p>
+                </div>
+                <br>
+                <div>
+                  <p><b> Server </b></p>
+                  <hr>
+                  <p> 1. 계정 관리 </p>
+                  <P> 2. 파일 및 디렉터리 관리 </P>
+                  <P> 3. 서비스 관리 </P>
+                  <P> 4. 패치 관리 </P>
+                  <P> 5. 로그 관리 </P>
+                </div>
+                <br>
+                <div>
+                  <p> <b>Web</b> </p>
+                  <hr>
+                  <p> 1. 버퍼 오버플로우 </p>
+                  <p> 2. SQL 인젝션 </p>
+                  <p> 3. CSRF </p>
+                </div>
+                <br>
+                <div>
+                  <p> <b>DBMS</b> </p>
+                  <hr>
+                </div>
+        
+              </div>
+            </div>
     
 
 
