--- a/views/manage.ejs
+++ b/views/manage.ejs
@@ -2,7 +2,10 @@
 
 <head>
     <% include ./inc/header.ejs %>
+    <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
+
 </head>
+
 <body>
     <% include ./inc/nav.ejs %>
 
@@ -14,7 +17,7 @@
         </div>
         <div class="col-sm-9">
             <h1>회원 관리</h1>
-            <table>
+            <table class="table table-striped">
                 <tr>
                     <th>Name</th>
                     <th>Email</th>
@@ -23,22 +26,45 @@
                     <th>BlackList change</th>
                 </tr>
                 <% for(let i=0; i < all_member.length; i++ ){ %>
-        
+
                 <tr>
                     <td><%=all_member[i].name %></td>
                     <td><%=all_member[i].email %></td>
                     <td><%=all_member[i].role %></td>
-                    <td><a href="/admin/admin_change?user=<%= all_member[i].email %>"><button>전환</button></a></td>
-                    <td><a href="/admin/black_change?user=<%= all_member[i].email %>"><button>전환</button></a></td>
+                    <td><a href="/admin/admin_change?user=<%= all_member[i].email %>"><button type="button"
+                                class="btn btn-dark">전환</button></a></td>
+                    <td><a href="/admin/black_change?user=<%= all_member[i].email %>"><button type="button"
+                                class="btn btn-dark">전환</button></a></td>
                 </tr>
                 <% } %>
-            </table>        
+            </table>
+            <div class="paging">
+                <a href="/admin/member_manage?page=<%= page - 1 %>" id="prev" name="<%=page-1%>"><i
+                        class="fas fa-caret-left"></i></a>
+                <% for(let p=pnStart; p <= pnEnd; p++){ %>
+                <a href="/admin/member_manage?page=<%= p %>"> <%= p %> </a>&nbsp;
+                <% } %>
+                <a href="/admin/member_manage?page=<%= page + 1 %>" id="next" name="<%=page+1%>"><i class="fas fa-caret-right"></i></a>
+                <a href="/admin/member_manage?page=<%= pnTotal %>">끝</a>
+
+            </div>
         </div>
     </div>
-    
-    
-    
-    
+
+
+
+    <script>
+        let prev = $('#prev').attr('name');
+        let next = $('#next').attr('name');
+        if (prev == 0) {
+            $('#prev').click(function (e) {
+                console.log("막아지는거임");
+                e.preventDefault();
+            });
+        }
+
+        
+    </script>
 </body>
 
 </html>
