페이징 마지막 페이지 문제 해결

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -12,3 +12,9 @@ html, body, .full {
 .admin_logo {
     color: #fff;
 }
+
+.paging {
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+}
