--- a/views/manage.ejs
+++ b/views/manage.ejs
@@ -46,7 +46,7 @@
                 <% } %>
                 <a href="/admin/member_manage?page=<%= page + 1 %>" id="next" name="<%=page+1%>"><i class="fas fa-caret-right"></i></a>
                 <a href="/admin/member_manage?page=<%= pnTotal %>">끝</a>
-
+                
             </div>
         </div>
     </div>
@@ -56,12 +56,21 @@
     <script>
         let prev = $('#prev').attr('name');
         let next = $('#next').attr('name');
+        let end = <%= pnTotal %>;
+        
         if (prev == 0) {
             $('#prev').click(function (e) {
                 console.log("막아지는거임");
                 e.preventDefault();
             });
         }
+        if(next == end + 1){
+            $('#next').click(function (e){
+                console.log("막아지는거임2");
+                e.preventDefault();
+            })
+        }
+
 
         
     </script>
