--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,29 +1,25 @@
 <html lang="en">
-
-<head>
+  <head>
     <% include ./inc/header.ejs %>
-</head>
+  </head>
 
-<body>
+  <body>
     <% include ./inc/nav.ejs %>
     <div class="row">
-        <div class="col-sm-3">
-            <div><%=user %>님 안녕하세요.</div>
-            <div><a href="/admin/dashboard">Dashboard</a></div>
-            <div><a href="/admin/member_manage">Member</a></div>
+      <div class="col-sm-3">
+        <div><%=user %>님 안녕하세요.</div>
+        <div><a href="/admin/dashboard">Dashboard</a></div>
+        <div><a href="/admin/member_manage">Member</a></div>
+      </div>
+      <div class="col-sm-9">
+        <div>
+          <h1>Dashboard</h1>
         </div>
-        <div class="col-sm-9">
-            <div>
-                <h1>Dashboard</h1>
-            </div>
-            <div>
-                전체 회원 <%= all_member %>
-                전체 Post <%= all_post %>
-                블랙 리스트 회원 <%= black_member %>
-
-            </div>
+        <div>
+          전체 회원 <%= all_member %> 전체 Post <%= all_post %> 블랙 리스트 회원
+          <%= black_member %>
         </div>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
