--- a/views/login.html
+++ b/views/login.html
@@ -6,8 +6,87 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" href="/css/admin_main.css">
+    <!-- <link rel="stylesheet" href="/css/admin_main.css"> -->
     <!-- <% include ./inc/header.ejs %> -->
+    <style>
+    /* reveal style class  */
+.data {
+  font-family: Poppins;
+  color: springgreen;
+  font-size: 42px;
+  letter-spacing: 12px;
+  font-weight: 600;
+  position: fixed;
+  top: 15%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100vh;
+  background: #000000;
+}
+
+.loginbox {
+  font-family: "Courier New", Courier, monospace;
+  color: white;
+  font-size: 19px;
+  letter-spacing: 1px;
+  font-weight: bold;
+  position: fixed;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.loginbutton {
+  font-family: "Courier New", Courier, monospace;
+  color: black;
+  font-size: 20px;
+  letter-spacing: none;
+  font-weight: bold;
+  border: 0.5px solid grey;
+  border-radius: 2.5px 2.5px 2.5px 2.5px;
+}
+
+.input {
+  width: 400px;
+  padding: 0.6em;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 12px;
+  border: 0.5px solid grey;
+  border-radius: 2.5px 2.5px 2.5px 2.5px;
+}
+
+.toplogo {
+  position: fixed;
+  top: 3%;
+  left: 36.5%;
+}
+
+.bottomline {
+  color: #888888;
+  font-size: 13px;
+  margin: 5px 30px 0px 0px;
+  position: fixed;
+  bottom: 3%;
+  left: 1%;
+}
+
+.bottomlink {
+  color: #555555;
+  font-size: 13px;
+  margin: 5px 7px 0px 0px;
+  padding: 0px 10px 0px 0px;
+  position: fixed;
+  bottom: 3%;
+}
+
+    </style>
 
     <!-- text reveal src -->
     <script src="https://cdn.jsdelivr.net/npm/baffle@0.3.6/dist/baffle.min.js"></script>
