--- a/client/src/styles/components/post/NewPostBoxCaption.css
+++ b/client/src/styles/components/post/NewPostBoxCaption.css
@@ -7,7 +7,8 @@
   height: calc(100% - 180px);
   -ms-overflow-style: none;
   border-top: 1px solid lightgray;
-  width: 330px;
+  max-width: 330px;
+  width: 100%;
 }
 
 @media only screen and (max-width: 767px) {
@@ -23,10 +24,11 @@
   position: absolute !important;
   bottom: 0rem !important;
   padding-top: 1rem;
+
   width: 100%;
   height: 60px;
   /* border-top: 1px solid lightgray; */
-  width: 330px;
+  max-width: 330px;
 }
 @media only screen and (max-width: 767px) {
   .NewPostBox_comment-box {
