--- a/client/src/styles/containers/NewPostBox.css
+++ b/client/src/styles/containers/NewPostBox.css
@@ -1,5 +1,8 @@
 .NewPostBox {
   border: 1px solid rgb(238, 238, 238);
+  max-width: 960px;
+  width: 100%;
+  margin: 0 auto !important;
 }
 @media only screen and (max-width: 767px) {
   .NewPostBox {
@@ -38,11 +41,15 @@
   position: relative !important;
   padding-left: 1rem !important;
   padding-right: 1rem !important;
+  max-width: 350px;
+  width: 100%;
 }
 @media only screen and (max-width: 767px) {
   .NewPostBox_input-text {
     position: relative;
     padding-left: 0px;
+    max-width: 600px;
+    width: 100%;
   }
 }
 
