시간이 없어요

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -67,7 +67,7 @@
                             width="200" height="200">
                     </div>
                     <div class="dash_text">
-                        <p><%= all_member %></p>
+                        <h1><%= all_member %></h1>
                     </div>
                 </div>
                 <h4 class="h4">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#USER</h4>
@@ -79,7 +79,7 @@
                             width="200" height="200">
                     </div>
                     <div class="dash_text">
-                        <p><%= all_post %></p>
+                        <h1><%= all_post %></h1>
                     </div>
                 </div>
                 <h4 class="h4">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#POST</h4>
@@ -91,7 +91,7 @@
                             width="200" height="200">
                     </div>
                     <div class="dash_text">
-                        <p><%= black_member %></p>
+                        <h1><%= black_member %></h1>
                     </div>
                 </div>
                 <h4 class="h4">&nbsp;&nbsp;&nbsp;
