--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -14,6 +14,145 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
     <link rel="stylesheet" type="text/css" href="/css/custom.css">
+    <style>
+    
+html, body {
+    background: #000000;
+}
+
+.sidenav {
+    height: 100%;
+    width: 200px;
+    position: fixed;
+    z-index: 1;
+    top: 5%;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    padding-top: 20px;
+  }
+  /* #818181 */
+  .sidenav a {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    font-family: 'Courier New', Courier, monospace;
+  }
+  
+  .sidenav a:hover {
+    color: #f1f1f1;
+  }
+
+
+ .nav-link {
+   color: #f1f1f1;
+   position: fixed;
+   top: 2%;
+   left: 93%;
+   font-family: 'Courier New', Courier, monospace;
+   font-size: 15px;
+   font-weight: bold;
+ }
+
+ .nav-top-p {
+   color: #f1f1f1;
+   position: fixed;
+   top: 10px;
+   left: 3.5em;
+   font-family: 'Courier New', Courier, monospace;
+   font-size: 20px;
+   font-weight: bold;
+ }
+
+ .nav-top-description {
+   
+  color: #818181;
+   
+   font-family: 'Courier New', Courier, monospace;
+   font-size: 14px;
+   font-style: italic;
+   font-weight: unset;
+   position: absolute;
+   top: 15px;
+   left: 20em;
+
+ }
+
+ .h4 {
+   font-family: 'Courier New', Courier, monospace;
+   color: #818181;
+ }
+  /* 대시보드 점보트론 스타일 */
+  .jumbotron {
+    background-color: #111;
+    color: white;
+    font-family: 'Courier New', Courier, monospace;
+
+  }
+
+
+
+  /* 대시보드 메인 동그라미 스타일 */
+.placeholders h4 { 
+  margin-bottom: 0;
+  color: white;
+
+}
+
+.placeholder { 
+  margin-top: 70px;
+}
+
+.placeholder img {
+  display: inline-block;
+  border-radius: 50%;
+}
+
+.img1 {
+  position:absolute; 
+  top:80px; 
+  left:380px;
+}
+
+.img2 {
+  position:absolute; 
+  top:80px; 
+  left:700px;
+}
+
+.img3 {
+  position:absolute; 
+  top:80px; 
+  left:1000px;
+}
+
+/* 대시보드 동그라미 안에 글씨 넣는 스타일 */
+.dash_wrap {
+  position: relative;
+}
+
+.dash_image {
+  vertical-align: middle;
+}
+
+.dash_text {
+  top: 50%;
+  left: 32%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+}
+
+.content-box {
+  /* float: middle; */
+  position: absolute;
+  top: 460px;
+  width: 1050px;
+  left: 300px;
+}
+
+    </style>
 
     <title>STYEL Admin</title>
 
