--- a/views/manage.ejs
+++ b/views/manage.ejs
@@ -1,110 +1,284 @@
 <html lang="en">
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+      integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
+      crossorigin="anonymous"
+    />
+    <!-- <link rel="stylesheet" type="text/css" href="/css/custom.css"> -->
 
-<head>
+    <style>
+      html,
+      body {
+        background: #000000;
+      }
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
-        integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="/css/custom.css">
-    <link rel="stylesheet" href="/css/admin.css">
+      .sidenav {
+        height: 100%;
+        width: 200px;
+        position: fixed;
+        z-index: 1;
+        top: 5%;
+        left: 0;
+        background-color: #111;
+        overflow-x: hidden;
+        padding-top: 20px;
+      }
+      /* #818181 */
+      .sidenav a {
+        padding: 6px 8px 6px 16px;
+        text-decoration: none;
+        font-size: 25px;
+        color: #818181;
+        display: block;
+        font-family: "Courier New", Courier, monospace;
+      }
+
+      .sidenav a:hover {
+        color: #f1f1f1;
+      }
+
+      .nav-link {
+        color: #f1f1f1;
+        position: fixed;
+        top: 2%;
+        left: 93%;
+        font-family: "Courier New", Courier, monospace;
+        font-size: 15px;
+        font-weight: bold;
+      }
+
+      .nav-top-p {
+        color: #f1f1f1;
+        position: fixed;
+        top: 10px;
+        left: 3.5em;
+        font-family: "Courier New", Courier, monospace;
+        font-size: 20px;
+        font-weight: bold;
+      }
+
+      .nav-top-description {
+        color: #818181;
+
+        font-family: "Courier New", Courier, monospace;
+        font-size: 14px;
+        font-style: italic;
+        font-weight: unset;
+        position: absolute;
+        top: 15px;
+        left: 20em;
+      }
+
+      .h4 {
+        font-family: "Courier New", Courier, monospace;
+        color: #818181;
+      }
+      /* 대시보드 점보트론 스타일 */
+      .jumbotron {
+        background-color: #111;
+        color: white;
+        font-family: "Courier New", Courier, monospace;
+      }
+
+      /* 대시보드 메인 동그라미 스타일 */
+      .placeholders h4 {
+        margin-bottom: 0;
+        color: white;
+      }
+
+      .placeholder {
+        margin-top: 70px;
+      }
+
+      .placeholder img {
+        display: inline-block;
+        border-radius: 50%;
+      }
+
+      .img1 {
+        position: absolute;
+        top: 80px;
+        left: 380px;
+      }
+
+      .img2 {
+        position: absolute;
+        top: 80px;
+        left: 700px;
+      }
+
+      .img3 {
+        position: absolute;
+        top: 80px;
+        left: 1000px;
+      }
+
+      /* 대시보드 동그라미 안에 글씨 넣는 스타일 */
+      .dash_wrap {
+        position: relative;
+      }
+
+      .dash_image {
+        vertical-align: middle;
+      }
+
+      .dash_text {
+        top: 50%;
+        left: 32%;
+        position: absolute;
+        transform: translate(-50%, -50%);
+      }
+
+      .content-box {
+        /* float: middle; */
+        position: absolute;
+        top: 460px;
+        width: 1050px;
+        left: 300px;
+      }
+    </style>
+    <style>
+      html,
+      body,
+      .full {
+        height: 100%;
+      }
+
+      .left-div {
+        background-color: #000;
+        color: #fff;
+        height: 100%;
+        text-align: center;
+      }
+
+      .admin_logo {
+        color: #fff;
+      }
+
+      .paging {
+        margin-right: auto;
+        margin-left: auto;
+        text-align: center;
+      }
+    </style>
+    <!-- <link rel="stylesheet" href="/css/admin.css" /> -->
     <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
 
     <title>STYEL Admin</title>
+  </head>
 
-</head>
-
-<body>
+  <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container-fluid">
-            <div class="navbar-header">
-
-                <div class="toplogo">
-                    <a href="/">
-                        <img alt="STYEL" src="https://styel.s3.ap-northeast-2.amazonaws.com/styel_42x42.png"
-                            style="position:fixed; top:3px; left: 5px;">
-                    </a>
-                </div>
-                <a class="nav-link" href="/admin/logout">Sign Out</a>
-                <p class="nav-top-p"> Admin Page</p>
-                <p class="nav-top-description"> This page is for administrators. Review the status, Manage accounts,
-                    Make Contact for technical support. </p>
-            </div>
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <div class="toplogo">
+            <a href="/">
+              <img
+                alt="STYEL"
+                src="https://styel.s3.ap-northeast-2.amazonaws.com/styel_42x42.png"
+                style="position:fixed; top:3px; left: 5px;"
+              />
+            </a>
+          </div>
+          <a class="nav-link" href="/admin/logout">Sign Out</a>
+          <p class="nav-top-p">Admin Page</p>
+          <p class="nav-top-description">
+            This page is for administrators. Review the status, Manage accounts,
+            Make Contact for technical support.
+          </p>
         </div>
+      </div>
     </nav>
 
     <div class="row">
-        <div class="sidenav navbar-inverse">
-            <br><br>
-            <a href="/admin/dashboard">&nbsp;Dashboard</a>
-            <a href="/admin/member_manage">&nbsp;Members</a>
-            <a href="#Help">&nbsp;Help</a>
+      <div class="sidenav navbar-inverse">
+        <br /><br />
+        <a href="/admin/dashboard">&nbsp;Dashboard</a>
+        <a href="/admin/member_manage">&nbsp;Members</a>
+        <a href="#Help">&nbsp;Help</a>
+      </div>
+
+      <div class="container">
+        <br /><br /><br />
+        <div class="jumbotron">
+          <h1>회원 관리</h1>
+          <table class="table" style="color:white">
+            <tr>
+              <th>Name</th>
+              <th>Email</th>
+              <th>Role</th>
+              <th>Admin change</th>
+              <th>BlackList change</th>
+            </tr>
+            <% for(let i=0; i < all_member.length; i++ ){ %>
+
+            <tr>
+              <td><%=all_member[i].name %></td>
+              <td><%=all_member[i].email %></td>
+              <td><%=all_member[i].role %></td>
+              <td>
+                <a href="/admin/admin_change?user=<%= all_member[i].email %>"
+                  ><button type="button" class="btn btn-dark">전환</button></a
+                >
+              </td>
+              <td>
+                <a href="/admin/black_change?user=<%= all_member[i].email %>"
+                  ><button type="button" class="btn btn-dark">전환</button></a
+                >
+              </td>
+            </tr>
+            <% } %>
+          </table>
         </div>
 
-        <div class="container">
-            <br><br><br>
-            <div class="jumbotron">
-                <h1>회원 관리</h1>
-                <table class="table" style="color:white">
-                    <tr>
-                        <th>Name</th>
-                        <th>Email</th>
-                        <th>Role</th>
-                        <th>Admin change</th>
-                        <th>BlackList change</th>
-                    </tr>
-                    <% for(let i=0; i < all_member.length; i++ ){ %>
-    
-                    <tr>
-                        <td><%=all_member[i].name %></td>
-                        <td><%=all_member[i].email %></td>
-                        <td><%=all_member[i].role %></td>
-                        <td><a href="/admin/admin_change?user=<%= all_member[i].email %>"><button type="button"
-                                    class="btn btn-dark">전환</button></a></td>
-                        <td><a href="/admin/black_change?user=<%= all_member[i].email %>"><button type="button"
-                                    class="btn btn-dark">전환</button></a></td>
-                    </tr>
-                    <% } %>
-                </table>
-            </div>
-            
-            <div class="paging">
-                <a href="/admin/member_manage?page=<%= page - 1 %>" id="prev" name="<%=page-1%>"><i
-                        class="fas fa-caret-left"></i></a>
-                <% for(let p=pnStart; p <= pnEnd; p++){ %>
-                <a href="/admin/member_manage?page=<%= p %>"> <%= p %> </a>&nbsp;
-                <% } %>
-                <a href="/admin/member_manage?page=<%= page + 1 %>" id="next" name="<%=page+1%>"><i
-                        class="fas fa-caret-right"></i></a>
-                <a href="/admin/member_manage?page=<%= pnTotal %>">끝</a>
-
-            </div>
+        <div class="paging">
+          <a
+            href="/admin/member_manage?page=<%= page - 1 %>"
+            id="prev"
+            name="<%=page-1%>"
+            ><i class="fas fa-caret-left"></i
+          ></a>
+          <% for(let p=pnStart; p <= pnEnd; p++){ %>
+          <a href="/admin/member_manage?page=<%= p %>"> <%= p %> </a>&nbsp; <% }
+          %>
+          <a
+            href="/admin/member_manage?page=<%= page + 1 %>"
+            id="next"
+            name="<%=page+1%>"
+            ><i class="fas fa-caret-right"></i
+          ></a>
+          <a href="/admin/member_manage?page=<%= pnTotal %>">끝</a>
         </div>
+      </div>
     </div>
 
-
-
     <script>
-        let prev = $('#prev').attr('name');
-        let next = $('#next').attr('name');
-        let end = <%= pnTotal %>;
+      let prev = $('#prev').attr('name');
+      let next = $('#next').attr('name');
+      let end = <%= pnTotal %>;
 
-        if (prev == 0) {
-            $('#prev').click(function (e) {
-                console.log("막아지는거임");
-                e.preventDefault();
-            });
-        }
-        if (next == end + 1) {
-            $('#next').click(function (e) {
-                console.log("막아지는거임2");
-                e.preventDefault();
-            })
-        }
-
-
-
+      if (prev == 0) {
+          $('#prev').click(function (e) {
+              console.log("막아지는거임");
+              e.preventDefault();
+          });
+      }
+      if (next == end + 1) {
+          $('#next').click(function (e) {
+              console.log("막아지는거임2");
+              e.preventDefault();
+          })
+      }
     </script>
-</body>
-
+  </body>
 </html>
